modifying swagger docs
